# tinyfile

./: CMakeLists.txt  Makefile  README.md  client.c  tinyfile.c
include/tinyfile/: api.h  messages.h  params.h  server.h  types.h
src/api/: api.c
src/server/: server.c  server.h
